added delete skill in job opening
also update method is made but form is not ready.some amount of work is completed in job vacancy
,work is still left

--- a/frontend/todo
+++ b/frontend/todo
@@ -2,4 +2,8 @@
 []user edit profile facility
 []make skill and social links card equal length
     and also look into their responsievness
-    
+[]make dates in user readable format
+
+#job vacancy
+[]waiting for appiedStatus in response
+[]apply api is not working properly
