added posts and suggested jobs in newsfeed

--- a/frontend/todo
+++ b/frontend/todo
@@ -7,3 +7,9 @@
 #job vacancy
 []waiting for appiedStatus in response
 []apply api is not working properly
+
+#suggessted jobs
+[]similar to percentage
+
+#applied jobs
+[]name of job and company logo missing and company  name also
