fixed issue with company visiting a profile and handled invalid profile url
1.when a company visit another user/comapany profile now it do not show connection btns
2.invalid profile urls : if the id and type are not correct then it will catch and display alert

--- a/frontend/todo
+++ b/frontend/todo
@@ -12,13 +12,15 @@
 []similar to percentage
 
 #applied jobs
-[]name of job and company logo missing and company  name also
+[x]name of job and company logo missing and company  name also
 
 #profile
-[]make sure a company doesnot get follow /any action btn
-[]also fix :when user is visiting profile of someone else if any thing is empty then 
+[x]make sure a company doesnot get follow /any action btn
+[x]also fix :when user is visiting profile of someone else if any thing is empty then 
 the msg says"add bla bla bla" but that should be shown only to owner not to other
 for other it should be link "no vacancy open currenlt" etc
+
+[]ask ishan where to redirect after caughting an incompatible usertype and userid
 
 #navigation
 []setup navigation differently for company
