fixed some data missing/incorrect issue:
1.in global search api skill was same as company
2.date was missing in vacancy detail page

--- a/frontend/todo
+++ b/frontend/todo
@@ -21,7 +21,7 @@
 #job vacancy
 [x]waiting for appiedStatus in response
 [x]apply api is not working properly
-[]date missing in vacany detail (not in api response)(ask mohit)
+[x]date missing in vacany detail (not in api response)(ask mohit)
 
 #suggessted jobs
 []similar to percentage
