Vacancy Search Services Added. Vacancy Model Updated, Routes Changed. Minor Bug Fixes

--- a/frontend/todo
+++ b/frontend/todo
@@ -10,7 +10,7 @@
 [x]image is constant in job vacancy detail page change to dynamic
 
 #superimportant
-[]globalsearch
+[x]globalsearch
 []setup navigation differently for company
 
 #crud
