added user,company,skill to global search

--- a/frontend/todo
+++ b/frontend/todo
@@ -40,7 +40,7 @@ for other it should be link "no vacancy open currenlt" etc
 
 #newfeed
 []ask mohit why suggesstedjobs and applied are same
-[]global search api is giving imporoper results(ask mohit)
+[x]global search api is giving imporoper results(ask mohit)
 
 #notification
 []talk with mohit to change notification msg
