updated todo file

--- a/frontend/todo
+++ b/frontend/todo
@@ -39,12 +39,12 @@ for other it should be link "no vacancy open currenlt" etc
 
 
 #newfeed
-[]ask mohit why suggesstedjobs and applied are same
+[x]ask mohit why suggesstedjobs and applied are same
 [x]global search api is giving imporoper results(ask mohit)
 
 #notification
 [x]talk with mohit to change notification msg
 [x]also ask how i am gona send him "isread" to false of notifications(i mean how would you exactly identify)
-[]get connection code 4 setted up by mohit
+[x]get connection code 4 setted up by mohit
 [x]img of the sender
 
